// Vitest Snapshot v1, https://vitest.dev/guide/snapshot.html

exports[`CLI Output Snapshots > Error Messages > mcp add non-existent server error matches snapshot 1`] = `
"❌ Error: MCP server 'nonexistent-server' not found in global registry.

Available MCPs: github"
`;

exports[`CLI Output Snapshots > Error Messages > mcp sync without project config error matches snapshot 1`] = `
"❌ Error: MCP configuration not found.

Expected one of:
  - agentsync.local.json (local, gitignored)
  - .agentsync/config.local.json (backup location)
  - .agentsync/config.json (team-shared, optional)

Create agentsync.local.json with:
  {"mcpServers": []}

Then use 'agentsync mcp add <server>' to select MCPs."
`;

exports[`CLI Output Snapshots > Error Messages > missing MCP registry error matches snapshot 1`] = `
"❌ Error: Global MCP registry not found at: ~/.agentsync/mcp.json

Please create it with your MCP server configurations.
Example:
{
  "github": {
    "command": "npx",
    "args": ["-y", "@modelcontextprotocol/server-github"],
    "env": { "GITHUB_TOKEN": "{GITHUB_TOKEN}" }
  }
}"
`;

exports[`CLI Output Snapshots > Error Messages > unknown command error matches snapshot 1`] = `
"error: unknown command 'unknown-command'

Usage: agentsync [options] [command]

Sync your AGENTS.md to all your AI coding tools - Cursor, Claude Code, Cline,
Windsurf, GitHub Copilot

Options:
  -V, --version   output the version number
  -h, --help      display help for command

Commands:
  init [options]  Initialize AgentSync with interactive setup wizard
  mcp             Manage MCP (Model Context Protocol) servers
  sync [options]  Sync libraries, rules, commands, and MCPs to AI tools
  library         Manage GitHub library sources
  help [command]  display help for command"
`;

exports[`CLI Output Snapshots > Init Command Help > init --help output matches snapshot 1`] = `
"Usage: agentsync init [options]

Initialize AgentSync with interactive setup wizard

Options:
  -t, --template <name>  Use a specific template (react-typescript, nextjs-app,
                         python-fastapi, monorepo-nx)
  --tools <tools>        Comma-separated list of tools to configure
  --use-symlinks         Use symlinks for compatibility (recommended) (default:
                         true)
  --no-symlinks          Use file copies instead of symlinks
  -f, --force            Overwrite existing configuration
  -h, --help             display help for command"
`;

exports[`CLI Output Snapshots > MCP Commands Help > mcp --help output matches snapshot 1`] = `
"Usage: agentsync mcp [options] [command]

Manage MCP (Model Context Protocol) servers

Options:
  -h, --help       display help for command

Commands:
  sync [options]   Sync selected MCPs to AI coding tools
  list             List available and active MCP servers
  add <server>     Add MCP server to project
  remove <server>  Remove MCP server from project
  help [command]   display help for command"
`;

exports[`CLI Output Snapshots > MCP Commands Help > mcp add --help output matches snapshot 1`] = `
"Usage: agentsync mcp add [options] <server>

Add MCP server to project

Options:
  -h, --help  display help for command"
`;

exports[`CLI Output Snapshots > MCP Commands Help > mcp list --help output matches snapshot 1`] = `
"Usage: agentsync mcp list [options]

List available and active MCP servers

Options:
  -h, --help  display help for command"
`;

exports[`CLI Output Snapshots > MCP Commands Help > mcp remove --help output matches snapshot 1`] = `
"Usage: agentsync mcp remove [options] <server>

Remove MCP server from project

Options:
  -h, --help  display help for command"
`;

exports[`CLI Output Snapshots > MCP Commands Help > mcp sync --help output matches snapshot 1`] = `
"Usage: agentsync mcp sync [options]

Sync selected MCPs to AI coding tools

Options:
  --tool <name>  Sync only to specific tool (cursor, claude)
  --dry-run      Preview changes without applying them
  -h, --help     display help for command"
`;

exports[`CLI Output Snapshots > Version and Help > --help output matches snapshot 1`] = `
"Usage: agentsync [options] [command]

Sync your AGENTS.md to all your AI coding tools - Cursor, Claude Code, Cline,
Windsurf, GitHub Copilot

Options:
  -V, --version   output the version number
  -h, --help      display help for command

Commands:
  init [options]  Initialize AgentSync with interactive setup wizard
  mcp             Manage MCP (Model Context Protocol) servers
  sync [options]  Sync libraries, rules, commands, and MCPs to AI tools
  library         Manage GitHub library sources
  help [command]  display help for command

  ╔═══════════════════════════════════════╗
  ║     AgentSync v0.2.0-alpha.9              ║
  ║  The missing infrastructure layer     ║
  ║  for AI agent configuration sync      ║
  ╚═══════════════════════════════════════╝
  

Examples:
  $ agentsync init                      # Interactive setup wizard
  $ agentsync sync                      # Sync libraries, rules, commands, MCPs
  $ agentsync sync --update             # Update GitHub caches and sync
  $ agentsync sync --dry-run            # Preview sync changes
  $ agentsync library list              # List configured libraries
  $ agentsync library cache-clear       # Clear library caches
  $ agentsync mcp list                  # List available MCPs
  $ agentsync mcp add github            # Add MCP server

Documentation:
  https://github.com/baranovxyz/agentsync"
`;
